# dart_web_server

./: .gitignore  CMakeLists.txt  Dockerfile  main.c
api/: endpoints.c  endpoints.h  handle.c  handle.h
api/note/: get.c  get.h
api/status/: notFound.c  notFound.h
core/: error.c  error.h
core/communication/: protocol.c  protocol.h  socket.c  socket.h
core/http/: handle.c  handle.h  header.c  header.h  request.c  request.h
core/http/request/: header.c  header.h  path.c  path.h  start.c  start.h
core/http/response/: build.c  build.h  header.c  header.h  send.c  send.h
core/network/: address.c  address.h  socket.c  socket.h
core/util/: read.c  read.h
